# textureOptimization

./: .gitignore  CMakeLists.txt  README.md  energy_optimization.cpp  index.html  main.cpp  multiscale.cpp  params.json  source_optimization.cpp  synth_texture.h  test.sh
NL/: nl_single_file.c
